Add small delay to tooltip switch/update

BUG: 358930